# usb-device

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rustfmt.yml
examples/test_class/: device.rs  main.rs
examples/test_class_host/: device.rs  main.rs  tests.rs
src/: allocator.rs  bus.rs  class.rs  class_list.rs  config.rs  control.rs  control_pipe.rs  control_request.rs  control_transfer.rs  descriptor.rs  device.rs  device_builder.rs  device_info.rs  device_standard_control.rs  dummy.rs  dummy_bus.rs  endpoint.rs  lib.rs  macros.rs  test_class.rs  usbcore.rs
src/descriptor/: lang_id.rs
src/utils/: atomic_mutex.rs  freezable_ref_cell.rs  lock.rs  mod.rs
tests/: README.md  test_class_tests.rs
tests/test_class_host/: 99-usb-test-class.rules  Cargo.toml  LICENSE  device.rs  main.rs  tests.rs
tests/test_helpers/: mod.rs
usb-device/: CHANGELOG.md  Cargo.toml
usb-device/src/: bus.rs  control.rs  device.rs  device_builder.rs
