[package]
name = "usb-device"
description = "Experimental device-side USB stack for embedded devices."
version = "0.2.5"
edition = "2018"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/usb-device"

[dev-dependencies]
libusb = "0.3.0"
rand = "0.6.1"

[features]
# Use a 256 byte buffer for control transfers instead of 128.
control-buffer-256 = []

[[test]]
name = "test_class_host"
path = "tests/test_class_host/main.rs"
harness = false
