[package]
name = "usb-device"
description = "Experimental device-side USB stack for embedded devices."
version = "0.2.8"
edition = "2018"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/usb-device"

[dev-dependencies]
rusb = "0.8.0"
rand = "0.6.1"

[features]
# Use a 256 byte buffer for control transfers instead of 128.
control-buffer-256 = []
control-buffer-512 = []
control-buffer-1024 = []

# Use larger endpoint buffers for highspeed operation (default fullspeed)
#
# Note: usb-device doesn't truly support high speed enumeration yet, so setting this will make
# TestClass only compliant with high speed mode. It may still manage to be enumerated as a full
# speed device, but the descriptors will be invalid.
test-class-high-speed = []

[[test]]
name = "test_class_host"
path = "tests/test_class_host/main.rs"
harness = false
