[package]
name = "usb-device"
description = "USB stack for embedded devices."
version = "0.3.2"
edition = "2018"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/rust-embedded-community/usb-device"

[dependencies]
defmt = { version = "0.3", optional = true }
portable-atomic = { version = "1.2.0", default-features = false }
heapless = "0.8"
log = { version = "0.4", default-features = false, optional = true}

[dev-dependencies]
rusb = "0.9.1"
rand = "0.8.5"

[features]

# Use larger endpoint buffers for highspeed operation (default fullspeed)
#
# Note: usb-device doesn't truly support high speed enumeration yet, so setting this will make
# TestClass only compliant with high speed mode. It may still manage to be enumerated as a full
# speed device, but the descriptors will be invalid.
test-class-high-speed = []

[[test]]
name = "test_class_host"
path = "tests/test_class_host/main.rs"
harness = false
